--- a/content/docs/core-concepts/ai-models/index.mdx
+++ b/content/docs/core-concepts/ai-models/index.mdx
@@ -9,7 +9,9 @@ with various AI models seamlessly through a unified interface.
 
 ## Core Components
 
-### [LLM Plugins](./llm-plugins)
+### LLM Plugins
+
+[Learn more about LLM Plugins →](./llm-plugins)
 
 Model-specific plugins that provide standardized interfaces for different AI providers:
 
@@ -35,7 +37,9 @@ interface ModelPlugin {
 }
 ```
 
-### [Model Providers](./model-providers)
+### Model Providers
+
+[Learn more about Model Providers →](./model-providers)
 
 A unified provider system that handles model selection, configuration, and failover:
 
@@ -63,7 +67,9 @@ A unified provider system that handles model selection, configuration, and failo
 }
 ```
 
-### [useModel API](./use-model-api)
+### useModel API
+
+[Learn more about useModel API →](./use-model-api)
 
 The core API for interacting with different model types:
 
@@ -88,7 +94,9 @@ const response = await useModel({
 });
 ```
 
-### [Embedding Setup](./embeddings)
+### Embedding Setup
+
+[Learn more about Embedding Setup →](./embeddings)
 
 Vector embedding generation and management for semantic search and memory retrieval:
 
@@ -107,7 +115,9 @@ Vector embedding generation and management for semantic search and memory retrie
 - **Context Building**: Build conversation context from similar interactions
 - **Relationship Mapping**: Understand entity relationships
 
-### [Templates & Prompts](./templates)
+### Templates & Prompts
+
+[Learn more about Templates & Prompts →](./templates)
 
 Structured prompt management system for consistent AI interactions:
 
