--- a/content/docs/core-concepts/index.mdx
+++ b/content/docs/core-concepts/index.mdx
@@ -14,9 +14,11 @@ with persistent memory, multi-modal capabilities, and extensive platform integra
 consists of several key domains that work together to provide a complete agent development
 experience.
 
-## [Architecture & Core](./architecture)
+## Architecture & Core
 
 The foundational layer of ElizaOS, built on:
+
+[Learn more about Architecture & Core →](./architecture)
 
 - **AgentRuntime**: The core runtime environment (`@elizaos/core`) that manages agent lifecycle,
   memory, and execution
@@ -29,9 +31,11 @@ The foundational layer of ElizaOS, built on:
 - **Client-Server Architecture**: Web-based client communicating with HTTP/WebSocket server
   endpoints
 
-## [Agent Development](./agent-development)
+## Agent Development
 
 Comprehensive agent creation and customization:
+
+[Learn more about Agent Development →](./agent-development)
 
 - **Character Definition**: JSON-based character schemas with personality traits, knowledge, and
   behavioral patterns
@@ -42,9 +46,11 @@ Comprehensive agent creation and customization:
 - **Tasks**: Long-running operations and background processes managed by the task system
 - **Agents**: Complete agent instances with memory, personality, and capabilities
 
-## [AI & Language Models](./ai-models)
+## AI & Language Models
 
 Multi-provider AI integration and model management:
+
+[Learn more about AI & Language Models →](./ai-models)
 
 - **LLM Plugins**: Standardized interfaces for OpenAI, Anthropic, Google, Ollama, and local models
 - **Model Providers**: Unified provider system with automatic failover and load balancing
@@ -53,9 +59,11 @@ Multi-provider AI integration and model management:
 - **Embedding Systems**: Vector embeddings for semantic search and memory retrieval
 - **Templates**: Structured prompt management with context injection and variable substitution
 
-## [Communication & Events](./communication)
+## Communication & Events
 
 Real-time communication and event-driven architecture:
+
+[Learn more about Communication & Events →](./communication)
 
 - **Server Architecture**: Express.js-based server with HTTP and WebSocket endpoints
 - **REST API**: Complete API for agent management, messaging, memory operations, and system
@@ -66,9 +74,11 @@ Real-time communication and event-driven architecture:
 - **Message Handlers**: Intelligent message processing pipeline with action detection and response
   generation
 
-## [Data & State Management](./data-state)
+## Data & State Management
 
 Persistent storage and intelligent memory systems:
+
+[Learn more about Data & State Management →](./data-state)
 
 - **State Management**: Dynamic state composition from multiple providers and data sources
 - **Memory System**: Vector-based memory storage with embedding search and retrieval
@@ -77,9 +87,11 @@ Persistent storage and intelligent memory systems:
   backends
 - **Entity System**: Relationship management for users, agents, and contextual entities
 
-## [Infrastructure & Tools](./infrastructure)
+## Infrastructure & Tools
 
 Developer tools and deployment infrastructure:
+
+[Learn more about Infrastructure & Tools →](./infrastructure)
 
 - **CLI Tools**: `@elizaos/cli` for project creation, development, testing, and deployment
 - **Environment Configuration**: Hierarchical configuration system with secret management
