--- a/content/docs/core-concepts/infrastructure/index.mdx
+++ b/content/docs/core-concepts/infrastructure/index.mdx
@@ -12,7 +12,9 @@ production deployment.
 
 ## Core Components
 
-### [CLI Tools](./cli-tools)
+### CLI Tools
+
+[Learn more about CLI Tools →](./cli-tools)
 
 The ElizaOS CLI (`@elizaos/cli`) is the primary interface for developers, providing a comprehensive
 toolkit for agent development:
@@ -49,7 +51,9 @@ interface CLICommand {
 }
 ```
 
-### [Environment Configuration](./environment-config)
+### Environment Configuration
+
+[Learn more about Environment Configuration →](./environment-config)
 
 Flexible environment management system with hierarchical configuration:
 
@@ -86,7 +90,9 @@ interface EnvironmentConfig {
 }
 ```
 
-### [Testing Infrastructure](./testing)
+### Testing Infrastructure
+
+[Learn more about Testing Infrastructure →](./testing)
 
 Comprehensive testing framework supporting multiple test types and environments:
 
@@ -117,7 +123,9 @@ interface TestFramework {
 - **Mock Services**: Mock external services and dependencies
 - **Test Data**: Fixtures and test data management
 
-### [Services](./services)
+### Services
+
+[Learn more about Services →](./services)
 
 Essential services powering the platform infrastructure:
 
