--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -39,19 +39,26 @@ Before you begin, ensure you have:
 
 <Steps>
   <Step>
-    ## Node.js (v23.3.0 or higher) Download from [nodejs.org](https://nodejs.org/) or use a version
-    manager like [nvm](https://github.com/nvm-sh/nvm).
+    ## Node.js (v23.3.0 or higher)
+    
+    Download from [nodejs.org](https://nodejs.org/) or use a version manager like [nvm](https://github.com/nvm-sh/nvm).
   </Step>
   <Step>
-    ## Bun (recommended package manager) Install from [bun.sh](https://bun.sh/docs/installation)
+    ## Bun (recommended package manager)
+    
+    Install from [bun.sh](https://bun.sh/docs/installation)
   </Step>
   <Step>
-    ## API Keys for your chosen model provider - OpenAI API key (recommended for beginners) -
-    Anthropic API key (for Claude models) - Or set up local models with Ollama
+    ## API Keys for your chosen model provider
+    
+    - OpenAI API key (recommended for beginners)
+    - Anthropic API key (for Claude models) 
+    - Or set up local models with Ollama
   </Step>
   <Step>
-    ## Windows Users WSL 2 required Install [WSL
-    2](https://learn.microsoft.com/en-us/windows/wsl/install-manual) for Windows compatibility.
+    ## Windows Users: WSL 2 required
+    
+    Install [WSL 2](https://learn.microsoft.com/en-us/windows/wsl/install-manual) for Windows compatibility.
   </Step>
 </Steps>
 
